--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.9"
 keywords = ["machine learning"]
-license = { file = "LICENSE" }
+license-files = ["LICENSE"]
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
